--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -9,5 +9,6 @@
 <body>
     <h2><%= skill.language %></h2>
     <h3>Skill Level: <%= skill.mastered ? 'Master' : 'Newby' %></h3>
+    <a href="/skills/<%= skill.id %>/edit">Edit</a>
 </body>
 </html>
